--- a/Views/Card/Index.cshtml
+++ b/Views/Card/Index.cshtml
@@ -1,10 +1,40 @@
-﻿@model IEnumerable<Card>
+﻿@using static YGWeb.Models.Card;
+
+@model IEnumerable<Card>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Size = Model.Count();
 }
 
 <h1>Card Database</h1>
+
+<div class="border p-3 mt-4">
+    @using (Html.BeginForm())
+    {
+        <p>
+            Find by name: @Html.TextBox("SearchString")
+            <input type="submit" value="Search" />
+        </p>
+        <p>
+            Filter Results:
+        </p>
+        <fieldset>
+            Card Type
+            @Html.DropDownList("CardType",
+            new SelectList(Enum.GetValues(typeof(cardType))),
+            "Select Card Type")
+            <p>
+                <input type="submit" value="Submit" />
+            </p>
+
+            Card
+
+        </fieldset>
+    }
+
+</div>
+
 
 <table class="table table-bordered table-striped" style="width:100%">
     <thead>
@@ -22,12 +52,12 @@
                 Card Race
             </th>
             <th>
-                Card Desctiption
+                Card Description
             </th>
         </tr>
     </thead>
     <tbody>
-        @foreach(var obj in Model.Take(1000))
+        @foreach(var obj in Model.Take(100))
         {
             <tr>
                 <td width="20%">
@@ -49,3 +79,14 @@
         }
     </tbody>
 </table>
+
+
+<nav aria-label="Page navigation example">
+    <ul class="pagination">
+        <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+        <li class="page-item"><a class="page-link" href="#1">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item"><a class="page-link" href="#">Next</a></li>
+    </ul>
+</nav>
