--- a/Views/Card/DeckBuilder.cshtml
+++ b/Views/Card/DeckBuilder.cshtml
@@ -30,21 +30,6 @@
 
 
 <div class="row">
-    <div class="column w-50 p-2" style="background-color:gray;">
-        @Html.TextBox("deckName", "Deck Name Here")
-        <table class="table table-bordered table-striped p-2" style="width:100%;aspect-ratio:1/1;table-layout:fixed">
-            @for (int row = 0; row < 6; row++)
-            {
-                <tr>
-                @for(int col = 0; col < 10; col++)
-                {
-                        <td></td>
-                }
-                </tr>
-            }
-        </table>
-        
-    </div>
     <div class="column w-50 p-0" style="background-color:darkcyan;">
         <div class="row p-2">
             <div class="col-6 ">
@@ -58,15 +43,15 @@
                     </p>
                 }
             </div>
-            
+
             <div class="col-6 text-end">
                 <img src="https://ms.yugipedia.com//4/4a/Back-AE.png" style="width:70%" />
             </div>
-            
+
         </div>
         <div class="p-0" style="height:620px;overflow:auto;">
             <table class="table table-bordered table-striped p-0" style="width:100%;table-layout:fixed" id="highlightable">
-                @if(Model != null)
+                @if (Model != null)
                 {
                     var chunks = Model.Chunk(8);
                     @foreach (var chunk in chunks)
@@ -75,10 +60,10 @@
                             @foreach (var card in chunk)
                             {
                                 <td>
-                                <a onclick="showInPopup('@Url.Action("CardDetails", "Card", new {id = card.id}, Context.Request.Scheme)', 'Card Details')" class="btn btn-success" style="padding:0">
+                                    <a onclick="showInPopup('@Url.Action("CardDetails", "Card", new {id = card.id, cardList = false}, Context.Request.Scheme)', 'Card Details')" class="btn btn-success" style="padding:0">
                                         <img src="@card.image_url" style="width:100%" />
-                                </a>
-                                    
+                                    </a>
+
                                 </td>
                             }
                             @for (int i = 0; i < (8 - chunk.Length); i++)
@@ -126,4 +111,21 @@
             }
         </div>
     </div>
+
+    <div class="column w-50 p-2" style="background-color:gray;">
+        @Html.TextBox("deckName", "Deck Name Here")
+        <table class="table table-bordered table-striped p-2" style="width:100%;aspect-ratio:1/1;table-layout:fixed">
+            @for (int row = 0; row < 6; row++)
+            {
+                <tr>
+                @for(int col = 0; col < 10; col++)
+                {
+                        <td></td>
+                }
+                </tr>
+            }
+        </table>
+        
+    </div>
+    
 </div>
