--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
     </div>
 
     <div class="modal" tabindex="-1" role="dialog" id="form-modal">
-        <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-dialog modal-xl" role="document">
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" style="text-align:center">Modal title</h5>
