--- a/Views/Card/Index.cshtml
+++ b/Views/Card/Index.cshtml
@@ -32,7 +32,7 @@
         <p>
             Card Type:
             @Html.DropDownList("CardType",
-            new SelectList(Enum.GetValues(typeof(cardType))),
+            new SelectList(Enum.GetValues(typeof(Card.cardType))),
             "Select Card Type")
         </p>
         <p style="padding-top:5px">
