Fixed bug where deck only holds 1 unique card. Can now add or remove cards one at a time

--- a/Views/Card/CardDetails.cshtml
+++ b/Views/Card/CardDetails.cshtml
@@ -71,7 +71,7 @@
         <div class="row">
             <div class="col-6 justify-content-evenly">
                 <a asp-action="addCard" asp-route-id="@Model.id" asp-route-s="@ViewBag.searchString" asp-route-p="@ViewBag.pageNumber" class="btn btn-success">Add to Deck</a>
-                <input style="background-color: gray" type="number" min="0" max="3" step="1" value="1"/>
+                <input style="background-color: gray" type="number" min="1" max="3" step="1" value="1"/>
             </div>
             <div class="col-6 text-end">
                 <b> Currently in Deck: @ViewBag.count</b>
@@ -84,7 +84,7 @@
         <div class="row" style="display:flex">
             <div class="col-6 justify-content-evenly">
                 <a asp-action="removeCard" asp-route-id="@Model.id" asp-route-s="@ViewBag.searchString" asp-route-p="@ViewBag.pageNumber" class="btn btn-danger">Remove from Deck</a>
-                <input style="background-color: gray" type="number" min="0" max="3" step="1" value="1" />
+                <input style="background-color: gray" type="number" min="1" max="@ViewBag.count" step="1" value="1" />
             </div>
             <div class="col-6 text-end">
                 <b> Currently in Deck: @ViewBag.count</b>
