Can now save and store decks. Decks are saved to Users and duplicate decks cannot be created

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -34,8 +34,8 @@
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
+    <div class="container container-xl" style="margin:0 auto">
+        <main role="main" class="pb-3" style="max-width:1500px">
             @RenderBody()
         </main>
     </div>
